[package]
name = "scanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
dns-lookup = "2.0.4"
ping = "0.5.1"
pnet = "0.34.0"
rayon = "1.8.0"
regex = "1.10.2"
tokio = { version = "1.35.1", features = ["full"] }
